[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unv"
version = "0.3.2"
requires-python = ">=3.9"
dependencies = ["lief","pefile","fastapi","uvicorn","python-multipart"]
authors = [{name="Jerrod Baker"}]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["unv*"]

[project.scripts]
unv = "unv.cli:main"
unv-daemon = "unv.daemon:main"
